--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ eagle projects/ADCS Sensor Board/SensorBoard_2020-11-14_6-30PM.zip
 *.l#1
 eagle projects/ADCS Sensor Board/BOM.txt
 eagle projects/ADCS Sensor Board/BOM
+eagle projects/ADCS Sensor Board/drilegend.l#1
