sensor board updates for rev b

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ eagle projects/ADCS Sensor Board/SensorBoard_2020-11-14_6-30PM.zip
 eagle projects/ADCS Sensor Board/BOM.txt
 eagle projects/ADCS Sensor Board/BOM
 eagle projects/ADCS Sensor Board/drilegend.l#1
+eagle projects/ADCS Sensor Board/eagle.epf
