--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ eagle projects/ADCS Sensor Board/BOM.txt
 eagle projects/ADCS Sensor Board/BOM
 eagle projects/ADCS Sensor Board/drilegend.l#1
 eagle projects/ADCS Sensor Board/eagle.epf
+eagle projects/Z+ Sun Sensor Board/~$BOM_Z+SUNSENSE.xlsx
