updates to Z+ sun sense board for 3d models

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ eagle projects/ADCS Sensor Board/BOM
 eagle projects/ADCS Sensor Board/drilegend.l#1
 eagle projects/ADCS Sensor Board/eagle.epf
 eagle projects/Z+ Sun Sensor Board/~$BOM_Z+SUNSENSE.xlsx
+eagle projects/Z+ Sun Sensor Board/ZPlusSunSensorBoard.csv
+eagle projects/Z+ Sun Sensor Board/ZPlusSunSensorBoard.txt
+eagle projects/Z- Sun Sensor Board/Z- Sun Sensor Board/BOM VALUES ZMinusSunSensorBoard.txt
