updates for 3d models for z- sun sense

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ eagle projects/Z+ Sun Sensor Board/~$BOM_Z+SUNSENSE.xlsx
 eagle projects/Z+ Sun Sensor Board/ZPlusSunSensorBoard.csv
 eagle projects/Z+ Sun Sensor Board/ZPlusSunSensorBoard.txt
 eagle projects/Z- Sun Sensor Board/Z- Sun Sensor Board/BOM VALUES ZMinusSunSensorBoard.txt
+eagle projects/Z- Sun Sensor Board/Z- Sun Sensor Board/BOM_ZMinusSunSensorBoard.csv
+eagle projects/Z- Sun Sensor Board/Z- Sun Sensor Board/ZMinusSunSensorBoard.csv
+eagle projects/Z- Sun Sensor Board/Z- Sun Sensor Board/~$BOM_Z-SUNSENSE.xlsx
