--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ releases/AcutuatorBoardRevA_2021.02.19/AcutuatorBoardRevA_2021.02.19/Assembly/Ac
 releases/AcutuatorBoardRevA_2021.02.19/AcutuatorBoardRevA_2021.02.19/ActuatorBoardRevA_2021.02.19.pdf
 *.log
 *.raw
+releases/ADCS_SensorBoard_RevA.1_2020-11-19/ADCS_SensorBoard_RevA_2020-11-15/~$ADCS_SensorBoard_BOM.xlsx
